# website

./: .build.yml  .env.ci  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hadolint.yml  .mailmap  .readthedocs.yaml  .tool-versions  .wakatime-project  Pipfile  README.md  SECURITY.md  build.sh  cspell.json  devenv.nix  devenv.yaml  mkdocs.ctrl-c.yml  mkdocs.pages.dev.yml  mkdocs.readthedocs.yml  mkdocs.tilde.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start-caddy-tildeserv.sh  vern.Caddyfile  wrangler-next.jsonc  wrangler.jsonc  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  deploybot.yml  docker.yml
.gitpod/: automations.yaml
.idx/: .gitignore  dev.nix
.tangled/workflows/: site-deploy.yml
docker/: Dockerfile  README.md  build.sh  entrypoint.sh
gmi/: contact.gmi  faq.gmi  index.gmi  now.gmi
gmi/user-manual/: index.gmi
markdown/: LICENSE.txt  _headers  _redirects  communities.md  contact.md  faq.md  humans.txt  index.md  links.md  mailru-domain4UYCAEDf4JUbpbfM.html  now.md  portfolio.md  projects.md  security.md
markdown/.well-known/: ads.txt  atproto-did  brave-rewards-verification.txt  did.json  keybase.txt  nostr.json  security.txt  security.txt.asc  security.txt.sig  security.txt.unsigned
markdown/contact/: code-reviews.md  details.md  donations.md  else.md  index.md  product-reviews.md  security.md  work.md
overrides/: 404.html  base.html  main.html
(+34 files in other folders)
